[gd_scene load_steps=3 format=2]

[ext_resource path="res://ui/hud/LineEdit.gd" type="Script" id=1]
[ext_resource path="res://ui/hud/RenameButton.gd" type="Script" id=2]

[node name="RenameButton" type="Button"]
margin_right = 120.0
margin_bottom = 20.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Rename Button"
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}
button_name = "Button Name"

[node name="LineEdit" type="LineEdit" parent="."]
visible = false
margin_right = 58.0
rect_min_size = Vector2( 120, 0 )
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Function name"
max_length = 48
caret_blink = true
caret_blink_speed = 0.5
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="minimum_size_changed" from="." to="LineEdit" method="_on_RenameButton_minimum_size_changed"]
[connection signal="pressed" from="." to="LineEdit" method="_on_EditButton_pressed"]
[connection signal="focus_exited" from="LineEdit" to="." method="_on_LineEdit_text_entered"]
[connection signal="text_entered" from="LineEdit" to="." method="_on_LineEdit_text_entered"]
[connection signal="text_entered" from="LineEdit" to="LineEdit" method="_on_LineEdit_text_entered"]
